create ContactList component

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
     0deg,
     rgba(19, 208, 194, 1) 0%,
     rgba(14, 158, 148, 1) 37%,
-    rgba(0, 212, 255, 1) 100%
+    rgba(0, 212, 255, 1) 79%,
+    rgba(255, 186, 0, 1) 100%
   );
   overflow-y: auto;
   overflow-x: hidden;
